Report/Background/grammar.tex
\begin{grammar}
%<program> ::= <header> '<!=\_=!>' <statement>
%
%<header> ::= 'vars:' '[' <identifier> ']' 'requirements:' '\{' <assertion> '\}'

<statements> ::= <statement> ';' <statements> | $\epsilon$

<statement> ::= <ghostid> ':=' <aexpr>
\alt <identifier> ':=' <aexpr>
\alt 'if' <bexpr> '\{' <statements> '\}'
\alt 'if' <bexpr> '\{' <statements> '\}' 'else' '\{' <statements> '\}'
\alt 'while' <bexpr> <invariant> <variant> '\{' <statements> '\}'
\alt '\#\{' <assertion> '\}'
\alt 'skip' | 'violate'

<invariant> ::= '?\{' <assertion> '\}'
\alt <invariant> ';' <invariant>

<variant> ::= '!\{' <aexpr> '\}' | $\epsilon$

<assertion> ::= '$\forall$' <identifier> '.' <assertion>
\alt '$\exists$' <identifier> '.' <assertion>
\alt '$\sim$' <assertion>
\alt <assertion> <assertionop> <assertion>
\alt <bexpr>

<assertionop> ::= '$\wedge$' | '$\vee$' | '$\Rightarrow$'

<bexpr> ::= 'true' | 'false' | \alt '!'<bexpr>
\alt <bexpr> <bop> <bexpr>
\alt <bexpr> <rop> <bexpr>
\alt '(' <bexpr> ')'

<bop> ::= '\&\&' | '||'

<rop> ::= '\verb\<\' | '$\le$' | '=' | '$\neq$' | '\verb\>\' | '$\ge$'

<aexpr> ::= <identifier>
\alt <ghostid>
\alt <integer>
\alt '-'<axpr>
\alt <aexpr> <aop> <aexpr>
\alt '(' <aexpr> ')'

<aop> ::= '$+$' | '$-$' | '$*$' | '$/$' | '\%'

<ghostid> ::= \emoji{ghost} <identifier> | \textdollar<identifier>
\end{grammar}
